@@ -1,6 +1,7 @@
 3.1
  - Threading behaviour is now documented, and can be queried.
  - Version information available at compile time.
+ - Configure with --with-tr1=boost to use BOOST shared_ptr.
  - String conversion now has its own header file.
  - Supports read-only transactions.
  - Fixed breakage with Solaris "make".
